[package]
name = "visa_tools"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "api-all", "devtools"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1"
lazy_static = "1.4.0"
visa-rs = "0.6.1"
rayon = "1.5.1"


log = "0.4.8"
simplelog = {version= "0.12.0",features= ["local-offset"] }
chrono = "0.4"
time = "0.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
